assets/css/_profile.scss
@import "variables";

.profile-update {
  @extend .center-block;
  @extend .mx-auto;
  @extend .my-2;
  @include media-breakpoint-up(sm) {
    width: 10rem;
  }
}

.profile-data-icon {
  text-align: center;
}

.profile-sidebar .card {
  @extend .mb-4;
  @extend .p-0;
}

.profile-periods .nav-link {
  @extend .p-0;
  @extend .mx-auto;
}


// Table styles
.profile-data {
  th {
    text-align: center;
  }

  td {
    @extend .align-middle;
    @extend .p-2;
  }

  // Make the table turn into a vertical table of blocks of rows for mobile
  @include media-breakpoint-down(xs) {
    thead {
      display: none;
    }

    tbody {
      display: flex;
      flex-direction: column;
    }

    tr {
      display: flex;
      flex-direction: column;

    }

    td {
      &:before {
        float: left;
      }

      &:first-child {
        text-align: center;
      }

      &:nth-of-type(2):before {
        content: "Rank";
      }

      &:nth-of-type(3):before {
        content: "Level";
      }

      &:nth-of-type(4):before {
        content: "Xp";
      }

      &:nth-of-type(5):before {
        content: "Xp Gains";
      }

      &:nth-of-type(6):before {
        content: "EHP Gains";
      }

      &:nth-of-type(7):before {
        content: "EHP";
      }
    }
  }
}

